--- a/octofit-tracker/frontend/package.json
+++ b/octofit-tracker/frontend/package.json
@@ -9,10 +9,23 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "bootstrap": "5.3.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
-    "bootstrap": "5.3.0",
-    "react-router-dom": "6.14.1"
+    "react-router-dom": "6.14.1",
+    "react-scripts": "5.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
